<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Titles -->
    <string name="app_name">Encrypt-IT</string>
    <string name="EncryptFile">Encrypt File</string>
    <string name="DecryptFile">Decrypt File</string>
    <string name="FileList">Browse for File</string>
    <string name="ReadText">Edit An Encrypted File</string>
    <string name="EncryptedEdit">Edit An Encrypted File</string>
    
    <!-- Button labels for HomeActivity -->
    <string name="EncryptStringButtonText">Encrypt a string</string>
    <string name="EncryptFileButtonText">Encrypt a file</string>
    <string name="DecryptFileButtonText">Decrypt a file</string>
    <string name="ReadFileButtonText">Edit an Encrypted File</string>
    
    <string name="EncryptAString">Encrypt a string:</string>
    <string name="StringLabel">String to Encrypt:</string>
    <string name="EncryptSelectText">Encryption Method:</string>
    <string name="EncryptItButtonText">Encrypt IT!</string>
    <string name="SeedText">Enter seed: </string>
    <string-array name="EncryptSelectOptions">
    	<item>AES</item>
    	<item>DES</item>
    </string-array>
    
    <string name="FileNameLabel">File Name:</string>
    <string name="BrowseButtonLabel">Browse</string>
    <string name="DecryptItButtonText">Decrypt IT!</string>
    <string name="ReadItButtonText">Read IT!</string>
    
    <string name="KeyNameLabel">Key Name:</string>
    <string name="DecryptFileName">Output Dir:</string>
    
    <!-- Ask user if they would like to encrypt/decrypt file in place -->
	<string name="encInPlaceLblTxt">Encrypt file in place</string>
	<string name="DecInPlaceLblTxt">Decrypt file in place</string>
	
	<!-- Menu strings -->
	<string name="sortFilesLbl">Sort Files</string>
	
	<!-- String Id for Intent Extras -->
		<!-- For the return of file names for FileListActivity, se id.xml for corresponding int id -->
	<string name="SELECTED_PATH">selected.path</string> <!-- Key name for file path -->
	<string name="SELECTED_TYPE">selected.type</string> <!-- Key name for whether key file or file to encrypt/decrypt -->
		<!-- For the passing of file/key names from DiscreteTextActivity to EncryptedEditActivity -->
	<string name="NAME_OF_FILE">name.file</string>
	<string name="NAME_OF_KEY">name.key</string>	
		<!-- For passing of ciphertext file contents from EncryptedEditActivity to EncryptFileActivity -->
	<string name="CONTENTS_OF_FILE">contents.cipher</string>	
</resources>
