<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView
		android:id="@+id/FileNameLbl"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/FileNameLabel"
	    android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip" />
    <EditText
    	android:id="@+id/FileNameEdit"
    	android:layout_width="160dip"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/FileNameLbl"/>
    <Button 
    	android:id="@+id/BrowseButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/BrowseButtonLabel"
    	android:layout_toRightOf="@+id/FileNameEdit"/>	
    <TextView
		android:id="@+id/KeyNameLbl"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/KeyNameLabel"
	    android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip" 
	    android:layout_below="@+id/FileNameLbl"/>
    <EditText
    	android:id="@+id/KeyNameEdit"
    	android:layout_width="160dip"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/KeyNameLbl"
    	android:layout_below="@+id/FileNameEdit"/>
    <Button 
    	android:id="@+id/BrowseKeyButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/BrowseButtonLabel"
    	android:layout_toRightOf="@+id/KeyNameEdit"
    	android:layout_below="@+id/BrowseButton"/>
    <TextView
    	android:id="@+id/EncryptSelectLbl"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/EncryptSelectText"
    	android:textSize="8pt"
    	android:paddingTop="10dip"
	    android:paddingBottom="20dip" 
	    android:layout_below="@+id/KeyNameLbl"/>	
    <Spinner 
    	android:id="@+id/EncryptSelect"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@+id/EncryptSelectLbl"
    	android:layout_below="@+id/KeyNameEdit"/>
    <TextView
    	android:id="@+id/DecryptNameLbl"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/DecryptFileName"
    	android:textSize="8pt"
    	android:paddingTop="10dip"
	    android:paddingBottom="20dip" 
	    android:layout_below="@+id/EncryptSelectLbl"/>
	 <EditText
    	android:id="@+id/DecryptNameEdit"
    	android:layout_width="160dip"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/DecryptNameLbl"
    	android:layout_below="@+id/EncryptSelect"/>	
    <Button
    	android:id="@+id/DecryptItButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/DecryptItButtonText"
    	android:layout_below="@+id/DecryptNameLbl"/>
</RelativeLayout>