<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView
		android:id="@+id/StringLbl"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/StringLabel"
	    android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip" />
    <EditText
    	android:id="@+id/StringEdit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/StringLbl"/>
    <TextView
    	android:id="@+id/EncryptSelectLbl"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/EncryptSelectText"
    	android:textSize="8pt"
    	android:paddingTop="10dip"
	    android:paddingBottom="20dip" 
	    android:layout_below="@+id/StringLbl"/>	
    <Spinner 
    	android:id="@+id/EncryptSelect"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@+id/EncryptSelectLbl"
    	android:layout_below="@+id/StringEdit"/>
    <Button
    	android:id="@+id/EncryptItButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/EncryptItButtonText"
    	android:layout_below="@+id/SeedLbl"/>
    <TextView
    	android:id="@+id/SeedLbl"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/SeedText"
    	android:layout_below="@+id/EncryptSelectLbl"
    	android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip" />
	<EditText
		android:id="@+id/seedEdit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:maxLines="1"
    	android:scrollHorizontally="true"
		android:layout_toRightOf="@+id/SeedLbl"
		android:layout_below="@+id/EncryptSelect"/>    			
</RelativeLayout>