<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView
		android:id="@+id/FileNameLbl"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/FileNameLabel"
	    android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip"
	    android:layout_alignBaseline="@+id/FileNameEdit" />
    <EditText
    	android:id="@+id/FileNameEdit"
    	android:layout_width="160dip"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/FileNameLbl"/>
    <Button 
    	android:id="@+id/BrowseButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/BrowseButtonLabel"
    	android:layout_toRightOf="@+id/FileNameEdit"/>	
    <TextView
		android:id="@+id/KeyNameLbl"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/KeyNameLabel"
	    android:textSize="8pt"
	    android:paddingTop="10dip"
	    android:paddingBottom="20dip" 
	    android:layout_below="@+id/FileNameLbl"
	    android:layout_alignBaseline="@+id/KeyNameEdit"/>
    <EditText
    	android:id="@+id/KeyNameEdit"
    	android:layout_width="160dip"
    	android:layout_height="wrap_content"
    	android:maxLines="1"
    	android:scrollHorizontally="true"
    	android:layout_toRightOf="@+id/KeyNameLbl"
    	android:layout_below="@+id/FileNameEdit"/>
    <Button 
    	android:id="@+id/BrowseKeyButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/BrowseButtonLabel"
    	android:layout_toRightOf="@+id/KeyNameEdit"
    	android:layout_below="@+id/BrowseButton"/>
    <Button
    	android:id="@+id/ReadItButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/ReadItButtonText"
    	android:layout_below="@+id/KeyNameLbl"/>
</RelativeLayout>